# atlantic-mirror

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: index.html  main.js  style.css
docs/data/: atlantic-mirror.json
scripts/: 01_fetch_city_lists.py  02_fetch_leads.py  02b_distill.py  03_embed.py  04_neutralize_country.py  05_match.py  06_map.py  07_caption.py  08_export_web.py  _common.py  analyze_name_collisions.py  eval_profiles.py  judge_captions.py  judge_pairs.py  lineup_eval.py  prototype_caption.py  prototype_distill.py  prototype_name_fixes.py  prototype_name_subspace.py  rerank_captions.py
