[project]
name = "international-sibling-cities"
version = "0.1.0"
description = "Explaining UK cities as combinations of familiar US cities via embedding geometry."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "sentence-transformers>=5.6.0",
    "einops>=0.8.2",
    "concept-erasure>=0.2.4",
    "plotly>=6.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["_common"]
